# OpenProxy

./: .gitattributes  .gitignore  LICENSE  README.md  package-lock.json  package.json
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue
frontend/src/api/: proxy.js
frontend/src/components/: EndpointBanner.vue  ModelCard.vue  NetworkCard.vue  PanelHeader.vue  SearchableSelect.vue  ToolSection.vue
src/: config.js  convert.js  index.js  models.js  runtime-config.js  server.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: backend_urls.rs  config_utils.rs  main.rs
src/proxy/: backend.js  errors.js  handlers.js  logging.js  middleware.js  models-service.js  privacy-filter.js  upstream.js
test/: convert.test.js  proxy-modules.test.js
test/e2e/: fake-upstream.js  stream-disconnect.mjs
